--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,15 +2,15 @@ name: epubx
 description: Epub Parser for Dart. Epub package fork. Suitable for use on the Server, the Web, or in Flutter
 homepage: https://github.com/rbcprolabs/epubx.dart
 issue_tracker: https://github.com/rbcprolabs/epubx.dart
-version: 3.0.0
+version: 3.0.1
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   archive: ^3.1.6
   quiver: ^3.0.1+1
-  xml: ^5.3.1
+  xml: ^6.0.0
   image: ^3.0.8
   collection: ^1.15.0
 
